# math-new

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  buildPublish.bat  math++  math++.cpp  math++.out  math++.sln  math++.vcxproj  math++.vcxproj.filters  mathpp  testing_software.cpp  testing_software.out  update.py
.github/workflows/: Super-Linter.yml  codeql-analysis.yml  linter.yml  mathpp-stats.yml  mathpp-tests.yml
algebraic_number_class/: algebraic_number_class.vcxproj
basic_math_operations/: _assembly_strlen.asm  _remove_leading_zeroes.asm  basic_math_operations.cpp  basic_math_operations.hpp  basic_math_operations.vcxproj  basic_math_operations.vcxproj.filters  inc.hpp
basic_math_operations/Addition Algorithm/: add.asm  add.hpp
basic_math_operations/Division Algorithm/: compare_string.hpp  divide.asm  divide.hpp  fdivide.hpp
basic_math_operations/Multiplication Algorithm/: multiply.asm  multiply.hpp
basic_math_operations/Subtraction Algorithm/: add_copy.hpp  subtract.asm  subtract.hpp
basic_math_operations/stats/: Makefile  stats.cpp
basic_math_operations_stats/: Makefile  stats.cpp  stats.out
basic_math_operations_stats/visualizer/: Makefile  visualize.cpp
code/includes/: arr_to_string.hpp  shift_decimal_point.hpp
code/source/: color.hpp  math++  math++.cpp
math++/: math++.cpp  math++.sln  math++.vcxproj  math++.vcxproj.filters
math++/libraries/: CImg.h
math++/testing_software/: .test.sh.swp  rng.cpp  test.sh  testing_software  testing_software.cpp  testing_software.out
source/: math++  math++.cpp
source/algorithms/: integer_square_root.hpp
testing_software/: test.sh  testing_software  testing_software.cpp
(+86 files in other folders)
